--- a/css/style_d.less
+++ b/css/style_d.less
@@ -144,6 +144,7 @@
                 font: 700 36px/48px @font;
                 color: #c4c4c4;
                 transition: color 0.3s;
+                cursor: pointer;
                 &.active {
                   color: @pink;
                 }
