--- a/css/style.css
+++ b/css/style.css
@@ -1206,7 +1206,7 @@ ul.list li:before {
           justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-top: 65px;
+  margin-top: 40px;
 }
 .wrapper main .inner .features-block:after {
   content: '';
@@ -1255,7 +1255,7 @@ ul.list li:before {
 }
 .wrapper main .inner .important-block-item-title {
   position: relative;
-  padding: 15px 30px 15px;
+  padding: 15px 30px 15px 15px;
   font: 500 22px/1.3 'Gilroy', sans-serif;
   background: #f6f6f6;
   border-radius: 5px;
@@ -1478,6 +1478,7 @@ ul.list li:before {
 }
 .wrapper main .inner .receive-image {
   width: 500px;
+  margin-top: 100px;
 }
 .wrapper main .inner .receive-image img {
   width: 100%;
@@ -2474,7 +2475,7 @@ ul.list li:before {
   margin-top: 30px;
 }
 .wrapper main .main-page .inner .category .actions_slider .swiper-slide-content-text-title {
-  font: 700 30px/1.3 'Gilroy', sans-serif;
+  font: 700 22px/1.3 'Gilroy', sans-serif;
 }
 .wrapper main .main-page .inner .category .actions_slider .swiper-slide-content-text-desc {
   margin-top: 20px;
@@ -2595,7 +2596,7 @@ ul.list li:before {
   margin-top: 30px;
 }
 .wrapper main .main-page .inner .category .bonus-content-text-title {
-  font: 700 30px/1 'Gilroy', sans-serif;
+  font: 700 22px/1.3 'Gilroy', sans-serif;
 }
 .wrapper main .main-page .inner .category .bonus-content-text-desc {
   max-width: 200px;
@@ -3549,9 +3550,6 @@ ul.list li:before {
 .wrapper main .about-page .inner .purpose-block-image img {
   width: 100%;
 }
-.wrapper main .about-page .inner .features {
-  margin-top: 100px;
-}
 .wrapper main .about-page .inner .features-title {
   font: 700 36px/1.3 'Gilroy', sans-serif;
 }
@@ -3565,7 +3563,6 @@ ul.list li:before {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-top: 35px;
 }
 .wrapper main .about-page .inner .features-block-item {
   position: relative;
@@ -3591,7 +3588,6 @@ ul.list li:before {
 }
 .wrapper main .about-page .inner .awards {
   position: relative;
-  margin-top: 70px;
 }
 .wrapper main .about-page .inner .awards-top {
   display: -webkit-box;
@@ -3731,7 +3727,6 @@ ul.list li:before {
   font: 300 18px/1.4 'Gilroy', sans-serif;
 }
 .wrapper main .about-page .inner .licenses {
-  margin-top: 125px;
   padding: 65px 0 70px;
   background: #fbfbfb;
   border-radius: 20px;
@@ -3872,7 +3867,6 @@ ul.list li:before {
 }
 .wrapper main .about-page .inner .partnership {
   position: relative;
-  margin-top: 135px;
   padding: 65px 65px 70px;
   background: #fbfbfb;
   border-radius: 20px;
@@ -4641,9 +4635,6 @@ ul.list li:before {
       align-self: flex-end;
   width: 465px;
   margin-bottom: 30px;
-}
-.wrapper main .bonuses-page .inner .bonuses {
-  margin-top: 75px;
 }
 .wrapper main .bonuses-page .inner .bonuses-title {
   font: 700 36px/1.3 'Gilroy', sans-serif;
@@ -5904,9 +5895,6 @@ ul.list li:before {
   width: 270px;
   margin-top: -5px;
 }
-.wrapper main .journal-page .inner .articles {
-  margin-top: 75px;
-}
 .wrapper main .journal-page .inner .articles-filter {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -6548,7 +6536,6 @@ ul.list li:before {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  margin-top: 40px;
 }
 .wrapper main .overdraft-page .inner .features-block:after {
   -ms-flex-preferred-size: 33%;
@@ -6717,10 +6704,19 @@ ul.list li:before {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin-top: 50px;
 }
 .wrapper main .partner-program-page .inner .reward-content-line-item {
-  margin-right: 100px;
+  width: 45%;
+  margin-top: 25px;
+}
+.wrapper main .partner-program-page .inner .reward-content-line-item:nth-child(-n + 2) {
+  margin-top: 0;
 }
 .wrapper main .partner-program-page .inner .reward-content-line-item:last-child {
   margin-right: 0;
@@ -6731,7 +6727,55 @@ ul.list li:before {
 }
 .wrapper main .partner-program-page .inner .reward-content-line-item-desc {
   margin-top: 10px;
-  font: 300 18px/1.5 'Gilroy', sans-serif;
+  font: 300 16px/1.5 'Gilroy', sans-serif;
+}
+.wrapper main .partner-program-page .inner .reward-content-line-item-desc .tooltip {
+  position: relative;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background: url(../img/icon_question.svg) no-repeat;
+  background-size: contain;
+  opacity: 1;
+  cursor: pointer;
+}
+.wrapper main .partner-program-page .inner .reward-content-line-item-desc .tooltip:hover {
+  background: url(../img/icon_question_pink.svg) no-repeat;
+}
+.wrapper main .partner-program-page .inner .reward-content-line-item-desc .tooltip:hover span {
+  opacity: 1;
+  visibility: visible;
+}
+.wrapper main .partner-program-page .inner .reward-content-line-item-desc .tooltip span {
+  position: absolute;
+  left: calc(100% + 7px);
+  top: -12px;
+  display: block;
+  padding: 15px 20px;
+  font: 300 14px/1.3 'Gilroy', sans-serif;
+  color: #808080;
+  background: #fff;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.08);
+          box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.08);
+  opacity: 0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  cursor: unset;
+  visibility: hidden;
+  z-index: 1;
+}
+.wrapper main .partner-program-page .inner .reward-content-line-item-desc .tooltip span:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 20px;
+  width: 10px;
+  height: 10px;
+  -webkit-transform: rotate(-45deg) translateY(-50%);
+          transform: rotate(-45deg) translateY(-50%);
+  background: #fff;
+  border-radius: 2px;
 }
 .wrapper main .partner-program-page .inner .reward-content-desc {
   margin-top: 35px;
@@ -7478,9 +7522,6 @@ ul.list li:before {
   margin-top: 15px;
   font: 300 18px/1.5 'Gilroy', sans-serif;
 }
-.wrapper main .remote-service-page .inner .features-block {
-  margin-top: 25px;
-}
 .wrapper main .remote-service-page .inner .content-block {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -7701,9 +7742,6 @@ ul.list li:before {
 .wrapper main .ruble-deposit-page .inner .top-banner-image {
   -ms-flex-item-align: end;
       align-self: flex-end;
-}
-.wrapper main .ruble-deposit-page .inner .features-block {
-  margin-top: 35px;
 }
 .wrapper main .safety-page .inner .top-banner {
   min-height: 225px;
@@ -7994,9 +8032,6 @@ ul.list li:before {
 .wrapper main .tariffs-page .inner .features-title {
   font: 500 30px/1.3 'Gilroy', sans-serif;
 }
-.wrapper main .tariffs-page .inner .features-block {
-  margin-top: 40px;
-}
 .wrapper main .tariffs-page .inner .steps {
   padding: 55px 70px 60px;
   background: #fbfbfb;
@@ -8142,9 +8177,6 @@ ul.list li:before {
   width: 426px;
   margin-top: -20px;
   border-radius: 0 0 20px 0;
-}
-.wrapper main .start-business-page .inner .features-block {
-  margin-top: 40px;
 }
 .wrapper main .start-business-page .inner .features-block-item {
   margin-top: 45px;
@@ -8471,6 +8503,9 @@ ul.list li:before {
   color: #f65e64;
   background: #f4f4f4;
   border-color: #f4f4f4;
+}
+.wrapper main .all-tools-page .inner .switcher-block-title::-webkit-scrollbar {
+  display: none;
 }
 .wrapper main .all-tools-page .inner .switcher-block-content {
   margin-top: 50px;
