--- a/css/style.less
+++ b/css/style.less
@@ -1092,7 +1092,7 @@ ul.list {
           display: flex;
           justify-content: space-between;
           flex-wrap: wrap;
-          margin-top: 65px;
+          margin-top: 40px;
           &:after {
             content: '';
             flex-basis: 25%;
@@ -1140,7 +1140,7 @@ ul.list {
             }
             &-title {
               position: relative;
-              padding: 15px 30px 15px;
+              padding: 15px 30px 15px 15px;
               font: 500 22px/1.3 @font;
               background: #f6f6f6;
               border-radius: 5px;
@@ -1346,6 +1346,7 @@ ul.list {
         }
         &-image {
           width: 500px;
+          margin-top: 100px;
           img {
             width: 100%;
           }
@@ -2261,7 +2262,7 @@ ul.list {
                   &-text {
                     margin-top: 30px;
                     &-title {
-                      font: 700 30px/1.3 @font;
+                      font: 700 22px/1.3 @font;
                     }
                     &-desc {
                       margin-top: 20px;
@@ -2368,7 +2369,7 @@ ul.list {
               &-text {
                 margin-top: 30px;
                 &-title {
-                  font: 700 30px/1 @font;
+                  font: 700 22px/1.3 @font;
                 }
                 &-desc {
                   max-width: 200px;
@@ -3236,7 +3237,6 @@ ul.list {
           }
         }
         .features {
-          margin-top: 100px;
           &-title {
             font: 700 36px/1.3 @font;
           }
@@ -3247,7 +3247,6 @@ ul.list {
           &-block {
             display: flex;
             flex-wrap: wrap;
-            margin-top: 35px;
             &-item {
               position: relative;
               margin-top: 55px;
@@ -3272,7 +3271,6 @@ ul.list {
         }
         .awards {
           position: relative;
-          margin-top: 70px;
           &-top {
             display: flex;
             justify-content: space-between;
@@ -3396,7 +3394,6 @@ ul.list {
           }
         }
         .licenses {
-          margin-top: 125px;
           padding: 65px 0 70px;
           background: @lgray;
           border-radius: 20px;
@@ -3523,7 +3520,6 @@ ul.list {
         }
         .partnership {
           position: relative;
-          margin-top: 135px;
           padding: 65px 65px 70px;
           background: @lgray;
           border-radius: 20px;
@@ -4265,7 +4261,6 @@ ul.list {
           }
         }
         .bonuses {
-          margin-top: 75px;
           &-title {
             font: 700 36px/1.3 @font;
           }
@@ -5504,7 +5499,6 @@ ul.list {
           }
         }
         .articles {
-          margin-top: 75px;
           &-filter {
             display: flex;
             &-item {
@@ -6150,7 +6144,6 @@ ul.list {
           border-radius: 20px;
           &-block {
             justify-content: flex-start;
-            margin-top: 40px;
             &:after {
               flex-basis: 33%;
             }
@@ -6325,9 +6318,15 @@ ul.list {
             }
             &-line {
               display: flex;
+              justify-content: space-between;
+              flex-wrap: wrap;
               margin-top: 50px;
               &-item {
-                margin-right: 100px;
+                width: 45%;
+                margin-top: 25px;
+                &:nth-child(-n + 2) {
+                  margin-top: 0;
+                }
                 &:last-child {
                   margin-right: 0;
                 }
@@ -6337,7 +6336,52 @@ ul.list {
                 }
                 &-desc {
                   margin-top: 10px;
-                  font: 300 18px/1.5 @font;
+                  font: 300 16px/1.5 @font;
+                  .tooltip {
+                    position: relative;
+                    display: inline-block;
+                    width: 20px;
+                    height: 20px;
+                    background: url(../img/icon_question.svg) no-repeat;
+                    background-size: contain;
+                    opacity: 1;
+                    cursor: pointer;
+                    &:hover {
+                      background: url(../img/icon_question_pink.svg) no-repeat;
+                      span {
+                        opacity: 1;
+                        visibility: visible;
+                      }
+                    }
+                    span {
+                      position: absolute;
+                      left: ~'calc(100% + 7px)';
+                      top: -12px;
+                      display: block;
+                      padding: 15px 20px;
+                      font: 300 14px/1.3 @font;
+                      color: #808080;
+                      background: #fff;
+                      border-radius: 10px;
+                      box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.08);
+                      opacity: 0;
+                      transition: 0.3s;
+                      cursor: unset;
+                      visibility: hidden;
+                      z-index: 1;
+                      &:before {
+                        content: '';
+                        position: absolute;
+                        left: 0;
+                        top: 20px;
+                        width: 10px;
+                        height: 10px;
+                        transform: rotate(-45deg) translateY(-50%);
+                        background: #fff;
+                        border-radius: 2px;
+                      }
+                    }
+                  }
                 }
               }
             }
@@ -7092,9 +7136,6 @@ ul.list {
             margin-top: 15px;
             font: 300 18px/1.5 @font;
           }
-          &-block {
-            margin-top: 25px;
-          }
         }
         .content-block {
           display: flex;
@@ -7311,11 +7352,6 @@ ul.list {
           }
           &-image {
             align-self: flex-end;
-          }
-        }
-        .features {
-          &-block {
-            margin-top: 35px;
           }
         }
       }
@@ -7618,9 +7654,6 @@ ul.list {
           &-title {
             font: 500 30px/1.3 @font;
           }
-          &-block {
-            margin-top: 40px;
-          }
         }
         .steps {
           padding: 55px 70px 60px;
@@ -7778,7 +7811,6 @@ ul.list {
         }
         .features {
           &-block {
-            margin-top: 40px;
             &-item {
               margin-top: 45px;
             }
@@ -8118,6 +8150,9 @@ ul.list {
                   background: #f4f4f4;
                   border-color: #f4f4f4;
                 }
+              }
+              &::-webkit-scrollbar {
+                display: none;
               }
             }
             &-content {
